--- a/app/views/rounds/index.html.erb
+++ b/app/views/rounds/index.html.erb
@@ -1,35 +1,21 @@
-<h1>Listing rounds</h1>
+<h2><%= @game.title %></h2>
 
-<table>
-  <tr>
-    <th>Number</th>
-    <th>Bid value</th>
-    <th>Bid suit</th>
-    <th>Bidding team won round</th>
-    <th>Tricks won by other team</th>
-    <th>Winning team</th>
-    <th>Game</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <% unless @game.completed? %>
+    <%= render 'form' %>
+  <% end %>
 
-<% @rounds.each do |round| %>
-  <tr>
-    <td><%= round.number %></td>
-    <td><%= round.bid_value %></td>
-    <td><%= round.bid_suit %></td>
-    <td><%= round.bidding_team_won_round %></td>
-    <td><%= round.tricks_won_by_other_team %></td>
-    <td><%= round.winning_team_id %></td>
-    <td><%= round.game_id %></td>
-    <td><%= link_to 'Show', round %></td>
-    <td><%= link_to 'Edit', edit_round_path(round) %></td>
-    <td><%= link_to 'Destroy', round, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <% @rounds.descending.each do |round| %>
 
-<br />
+    <h3>Round <%= round.number %></h3>
+    <div class="round_content">
+      <p> <%= round.score %>
+      <ul>
+        <li><%= round.bid_player.name %> (<%= round.bid_team.name %>) bid <%= round.bid %> </li>
+        <li><%= round.bid_team.name %> won <%= round.tricks_won_by_bidders %> tricks
+        <li><%= round.other_team.name %> won <%= round.tricks_won_by_other_team %> tricks
+      </ul>
+    </div>
 
-<%= link_to 'New Round', new_round_path %>
+  <% end %>
+
+<%= link_to 'New Round', new_game_round_path(@game) %>
