--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,23 +1,26 @@
-<h1>Listing teams</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h2>Teams</h2>
 
 <% @teams.each do |team| %>
-  <tr>
-    <td><%= team.name %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <div>
+    <h3><%= team.name %></h3>
+    <div class="team_content">
+      <p>
+        <% player_1 = team.players.first() %>
+        <% player_2 = team.players.last() %>
+        <%= link_to "#{player_1.name}", player_1 %>
+        and
+        <%= link_to "#{player_2.name}", player_2 %>
+      </p>
+      <ul>
+        <li><%= link_to 'Details', team %></li>
+        <li><%= link_to 'Rename', edit_team_path(team) %></li>
+        <li><%= link_to 'Disband', team, method: :delete, data: { confirm: 'Break up the band?' } %></li>
+      </ul>
+    </div>
+  </div>
 <% end %>
-</table>
 
-<br />
 
-<%= link_to 'New Team', new_team_path %>
+<div>
+  <%= link_to 'New Team', new_team_path %>
+</div>
