--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<div class="player details">
   <b>Name:</b>
   <%= @player.name %>
-</p>
+</div>
 
 
 <%= link_to 'Edit', edit_player_path(@player) %> |
