--- a/app/assets/stylesheets/main/players.css.scss
+++ b/app/assets/stylesheets/main/players.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Players controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.player {
+  margin: 20px 0;
+
+  .player_content {
+    margin-left: 1em;
+  }
+}
