--- a/app/assets/stylesheets/main/teams.css.scss
+++ b/app/assets/stylesheets/main/teams.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Teams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.team {
+  margin: 20px 0px;
+
+  .team_content {
+    margin-left: 1em;
+  }
+}
