--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Misere</title>
+  <title>Misère</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <header>
-    <h1>Misere</h1>
-    <nav>
-      <ul>
-        <li><%= link_to "Players", players_path %></li>
-        <li><%= link_to "Teams", teams_path %></li>
-        <li><%= link_to "Games", games_path %></li>
-      </ul>
-    </nav>
-  </header>
+  <div id="header_container">
+    <header>
+        <h1>Misère</h1>
+        <nav>
+          <ul>
+            <li><%= link_to "Players", players_path %></li>
+            <li><%= link_to "Teams", teams_path %></li>
+            <li><%= link_to "Games", games_path %></li>
+          </ul>
+        </nav>
+    </header>
+  </div>
 
-<%= yield %>
+<div id="content_container">
+  <%= yield %>
+</div>
+
+<script>
+  $(function() {
+
+    $("#notice").delay(1000).fadeOut(2000);
+
+  });
+</script>
 
 </body>
 </html>
