--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -15,10 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-    <div class="field">
+  <% if @team.new_record? %>
+  <div class="field">
     <%= select_tag("players[][id]", options_from_collection_for_select(Player.all, :id, :name)) %> and
     <%= select_tag("players[][id]", options_from_collection_for_select(Player.all, :id, :name)) %>
   </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
