--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -17,7 +17,7 @@
 <% end %>
 
 
-<div>
-  <%= link_to 'Play', new_game_path %>
+<div class="new">
+  <%= link_to 'New Game', new_game_path %>
 </div>
 
