--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name, "name" %><br />
-    <%= f.text_field :name %>
+    <p><%= f.label :name, "Name" %></p>
+    <%= f.text_field :name, size: 20 %>
   </div>
   <div class="actions">
     <%= f.submit %>
