--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<div class="player details">
-  <b>Name:</b>
-  <%= @player.name %>
+<h2><%= @player.name %></h2>
+<div class="details">
 </div>
 
 
