--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -1,18 +1,26 @@
 @import 'includes';
 
 html {
-  background-color: $darkgrey;
+  background-color: #bada55;
+}
+
+#body_container {
+  margin: 0 auto;
+  width: $pagewidth;
+
+  -moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
+  box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
 }
 
 #header_container {
   header{
-    width: $pagewidth;
     margin: 0 auto;
     padding: 10px;
 
     color: $offwhite;
     background-color: $offblack;
-    border: 1px solid $offblack;
+    /*border: 1px solid $offblack;*/
 
     text-align: center;
 
@@ -30,16 +38,15 @@ html {
   ul {
     li {
       display: inline;
-      margin-right: 10px;
+      margin: 0 5px;
     }
   }
 }
 
 #content_container {
-  width: $pagewidth;
   margin: 0 auto 100px auto;
-  padding: 20px 10px;
-  border: 1px solid $offblack;
+  padding: 20px 30px;
+  /*border: 1px solid $offblack;*/
 
   color: $offblack;
   background-color: $white;
@@ -53,17 +60,44 @@ html {
     margin-bottom: .5em;
   }
 
-  ul.control {
+  p {
+    margin-bottom: 1em;
+  }
 
-    margin-top: 1em;
+  ul {
 
-    li {
-      display: inline;
-      margin-right: 1em;
+    margin-bottom: 1em;
+
+    &.control {
+
+      margin-top: 1em;
+
+      li {
+        display: inline;
+        margin-right: 1em;
+      }
     }
   }
 
+  .new {
+    margin-top: 40px;
+  }
+
 }
+
+form {
+  .field {
+    margin: 1em 0 1.5em 0;
+
+    p {
+      margin-bottom: .5em;
+    }
+  }
+  .actions {
+    margin: 3em 0 1em 0;
+  }
+}
+
 
 a.delete {
   color: $suitred;
