--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,22 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="body_container">
+    <div id="header_container">
+      <header>
+          <h1>Misère</h1>
+          <nav>
+            <ul>
+              <li><%= link_to "Players", players_path %></li>
+              <li><%= link_to "Teams", teams_path %></li>
+              <li><%= link_to "Games", games_path %></li>
+            </ul>
+          </nav>
+      </header>
+    </div>
 
-  <div id="header_container">
-    <header>
-        <h1>Misère</h1>
-        <nav>
-          <ul>
-            <li><%= link_to "Players", players_path %></li>
-            <li><%= link_to "Teams", teams_path %></li>
-            <li><%= link_to "Games", games_path %></li>
-          </ul>
-        </nav>
-    </header>
-  </div>
-
-<div id="content_container">
-  <%= yield %>
+    <div id="content_container">
+      <%= yield %>
+    </div>
 </div>
 
 <script>
