--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -12,11 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <p><%= f.label :name %></p>
+    <%= f.text_field :name, {:size => 20 } %>
   </div>
   <% if @team.new_record? %>
   <div class="field">
+    <p><%= f.label :players__id %></p>
     <%= select_tag("players[][id]", options_from_collection_for_select(Player.all, :id, :name)) %> and
     <%= select_tag("players[][id]", options_from_collection_for_select(Player.all, :id, :name)) %>
   </div>
