--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -53,11 +53,15 @@ html {
 
   h2 {
     font-size: 2em;
-    margin-bottom: 1em;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $lightgrey;
+    margin-bottom: 10px;
+
   }
 
   h3 {
-    margin-bottom: .5em;
+    font-size: 1.5em;
+    margin-bottom: 1em;
   }
 
   p {
@@ -81,6 +85,15 @@ html {
 
   .new {
     margin-top: 40px;
+
+    /* TODO: clarify for jquery-ui button styles on these link tags */
+    a {
+
+      &:hover {
+        color: $offblack;
+
+      }
+    }
   }
 
 }
@@ -97,7 +110,6 @@ form {
     margin: 3em 0 1em 0;
   }
 }
-
 
 a.delete {
   color: $suitred;
