--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,7 +4,7 @@
   <h2><%= @game.title %></h2>
   <p><%= @game.completed? ? "Final" : "Current" %> score: <%= @game.current_score %></p>
   <% if @game.completed? %>
-  <%= @game.winner.name + " won this one." %>
+  <%= @game.winning_team.name + " won this one." %>
   <% else %>
   <%= link_to 'Continue game', game_rounds_path(@game) %>
   <% end %>
