--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<div id="notice_container"><p id="notice"><%= notice %></p></div>
 
 <h2><%= @player.name %></h2>
 <div class="details">
