--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -71,14 +71,21 @@ html {
   ul {
 
     margin-bottom: 1em;
+    margin-left: 1.5em;
+
+    li {
+      list-style-type: disc;
+    }
 
     &.control {
 
       margin-top: 1em;
+      margin-left: 0;
 
       li {
         display: inline;
         margin-right: 1em;
+        list-style-type: none;
       }
     }
   }
@@ -94,6 +101,10 @@ html {
 
       }
     }
+  }
+
+  .details {
+    margin: 40px 0;
   }
 
 }
@@ -139,8 +150,7 @@ a.delete {
 }
 
 #notice_container {
-  margin-bottom: 20px;
-  height: 1em;
+  display: none;
 }
 
 #notice {
