--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,7 @@
-<p id="notice"><%= notice %></p>
+<div id="notice_container"><p id="notice"><%= notice %></p></div>
 
-<div class="game details">
-  <h2><%= @game.title %></h2>
+<h2><%= @game.title %></h2>
+<div class="details">
   <p><%= @game.completed? ? "Final" : "Current" %> score: <%= @game.current_score %></p>
   <% if @game.completed? %>
   <%= @game.winning_team.name + " won this one." %>
