--- a/app/views/rounds/index.html.erb
+++ b/app/views/rounds/index.html.erb
@@ -2,7 +2,6 @@
 
 <div id="notice_container"><p id="notice"><%= notice %></p></div>
 
-<!-- TODO: No need for this at round 0 -->
 <% unless @rounds.descending.empty? %>
   <p class="chart_title"><%= (@game.completed? ? "Final" : "Current") + " score: #{@game.current_score}" %></p>
   <div id="rounds_index_graph" class="flot_chart"></div>
@@ -38,35 +37,10 @@
 
 <script>
   $(function() {
-    <% unless @rounds.descending.empty? %>
-      setUpFlotChart();
+    <% unless @rounds.empty? %>
+      setUpScoreFlotChart();
     <% end %>
   });
 
-  function setUpFlotChart() {
-    var data = [];
-    var colours = ["#444", "#c00"];
-    <% @game.teams.each do |team| %>
-    data.push({
-      label: "<%= team.name %>",
-      data: <%= team.scores_for_game @game %>,
-      color: colours.shift()
-    });
-    <% end %>
-
-    var plot = $.plot($('#rounds_index_graph'), data, {
-      yaxis: {
-        tickDecimals: 0
-      },
-      xaxis: {
-        tickDecimals: 0
-      },
-      legend: {
-        position: "nw",
-        labelBoxBorderColor: "#fff"
-      }
-
-    });
-
-  }
+  <%= render 'flot_rounds_graph' %>
 </script>
