--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -77,6 +77,10 @@ html {
       list-style-type: disc;
     }
 
+    ul li {
+      list-style-type: circle;
+    }
+
     &.control {
 
       margin-top: 1em;
