simple users with devise + user ownership

--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -153,11 +153,16 @@ a.delete {
   }
 }
 
-#notice_container {
+#notice_container, #alert_container {
   display: none;
 }
 
 #notice {
+  text-align: center;
+  color: $green;
+}
+
+#alert {
   text-align: center;
   color: $green;
 }
