--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
     </div>
 
     <div id="content_container">
+      <div id="notice_container"><p id="notice"><%= notice %></p></div>
+      <div id="alert_container"><p id="alert"><%= alert %></p></div>
       <%= yield %>
     </div>
   </div>
