--- a/app/assets/stylesheets/main/global_template.css.scss
+++ b/app/assets/stylesheets/main/global_template.css.scss
@@ -5,12 +5,12 @@ html {
 }
 
 #body_container {
-  margin: 0 auto;
+  margin: 20px auto 0 auto;
   width: $pagewidth;
 
-  -moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
-  -webkit-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
-  box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.3);
 }
 
 #header_container {
